--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
+  "name": "social-network-api",
+  "version": "1.0.1",
+  "description": "Mongoose back-end project - Develop",
+  "main": "server.js",
+
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "seed": "node utils/seed",
+    "heroku-postbuild": "node utils/seed.js"
+  },
+  "repository": {
+    "type": "git",
+    "url":""
+  },
+  
+  "keywords": [],
+  "author": "",
+
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
   }
 }
+
