--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.1",
   "description": "Mongoose back-end project - Develop",
   "main": "server.js",
-
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -12,16 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url":""
+    "url": "https://github.com/RG-GitUser/Social-Network-API"
   },
-  
   "keywords": [],
-  "author": "",
-
+  "author": "Riley Gaffney",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
   }
 }
-
